schedule card overflow fixed

--- a/app/scss/_layout.scss
+++ b/app/scss/_layout.scss
@@ -53,7 +53,7 @@ body {
 					background-color : darken($bg_color_main_section, 10%);
 				}
 			}
-		} 
+		}
 
 		.social_links {
 			padding : 20px;
@@ -123,13 +123,13 @@ body {
 	}
 
  .section__main {
-		
+
 		@extend .section;
 
 	 	// For the background image
 		background-image : url('./images/cover_main.png');
 		background-repeat : no-repeat;
-		background-size : cover; 
+		background-size : cover;
 		max-height : $max_height_main_section;
 		min-height : $min_height_main_section;
 
@@ -158,14 +158,14 @@ body {
 
 		.button__applynow {
 			@extend .button;
-			
+
 			line-height : 75px;
 			background: $color_button_apply;
 			box-shadow: 0px 1px 2px 0px rgba(0,0,0,0.33), inset 0px -3px 0px 0px rgba(0,0,0,0.21);
 			font-family: Quicksand;
 			font-weight : bolder;
 			font-size: 24px;
-			text-shadow : 0px 1px rgba(0, 0, 0, 0.15); 
+			text-shadow : 0px 1px rgba(0, 0, 0, 0.15);
 			color: $bg_color_main_section;
 			margin : 0 auto;
 			margin-top : 6%;
@@ -205,7 +205,7 @@ body {
 		height : auto;
 
 		.content__about {
-			@extend .inner_content;		
+			@extend .inner_content;
 			color  : white;
 			padding : 20px;
 			padding-bottom : 111px;
@@ -272,10 +272,11 @@ body {
 				box-shadow : 0px 2px 3px rgba(0, 0, 0, 0.2);
 				background-color : #ffffff;
 				margin-bottom : 120px;
+				overflow: hidden;
 
 				ul {
 					list-style : none;
-					// background-color : red;	
+					// background-color : red;
 					overflow : scroll;
 					margin-left : -40px;
 				}
@@ -284,7 +285,7 @@ body {
 
 			.schedule_card--title {
 				font-family: 'Source Sans Pro';
-				font-weight : 700;	
+				font-weight : 700;
 				font-size: 24px;
 				color: #000000;
 				line-height: 31px;
@@ -295,7 +296,7 @@ body {
 
 			.schedule_card--single_schedule{
 				width : 100%;
-				height : 50px;	
+				height : 50px;
 				margin-bottom : 10px;
 				background-color : #576976;
 				padding : 20px;
